--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -172,7 +172,6 @@ libbitcoin_server_a_SOURCES = \
   chain.cpp \
   checkpoints.cpp \
   init.cpp \
-  leveldbwrapper.cpp \
   main.cpp \
   merkleblock.cpp \
   miner.cpp \
@@ -254,6 +253,7 @@ libbitcoin_common_a_SOURCES = \
   hash.cpp \
   key.cpp \
   keystore.cpp \
+  leveldbwrapper.cpp \
   names.cpp \
   netbase.cpp \
   protocol.cpp \
@@ -347,6 +347,8 @@ namecoin_tx_LDADD = \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBSECP256K1) \
   $(BOOST_LIBS) \
+  $(LIBLEVELDB) \
+  $(LIBMEMENV)
   $(CRYPTO_LIBS)
 
 namecoin_tx_SOURCES = bitcoin-tx.cpp
