Add name_show RPC call.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -186,6 +186,7 @@ libbitcoin_server_a_SOURCES = \
   rpcblockchain.cpp \
   rpcmining.cpp \
   rpcmisc.cpp \
+  rpcnames.cpp \
   rpcnet.cpp \
   rpcrawtransaction.cpp \
   rpcserver.cpp \
