Accept auxpow as PoW verification.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -73,6 +73,7 @@ BITCOIN_CORE_H = \
   addrman.h \
   alert.h \
   allocators.h \
+  auxpow.h \
   amount.h \
   base58.h \
   bloom.h \
@@ -223,6 +224,7 @@ libbitcoin_common_a_CPPFLAGS = $(BITCOIN_INCLUDES)
 libbitcoin_common_a_SOURCES = \
   allocators.cpp \
   amount.cpp \
+  auxpow.cpp \
   base58.cpp \
   chainparams.cpp \
   coins.cpp \
